--- a/index.css
+++ b/index.css
@@ -33,6 +33,8 @@ a:link, a:visited, a:active, a:hover {
     opacity: 0;
     z-index: 1;
     animation: keyframes-splash 6s ease-out;
+    -moz-animation: keyframes-splash 6s ease-out;
+    -webkit-animation: keyframes-splash 6s ease-out;
 }
 
 .heading {
@@ -49,6 +51,8 @@ a:link, a:visited, a:active, a:hover {
     opacity: 0;
     z-index: 1;
     animation: keyframes-heading 5s ease-out 7s;
+    -moz-animation: keyframes-heading 5s ease-out 7s;
+    -webkit-animation: keyframes-heading 5s ease-out 7s;
 }
 
 .scroll {
@@ -60,7 +64,11 @@ a:link, a:visited, a:active, a:hover {
     position: absolute;
     overflow: hidden;
     transform-origin: 50% 100%;
+    -moz-transform-origin: 50% 100%;
+    -webkit-transform-origin: 50% 100%;
     transform: perspective(300px) rotateX(25deg);
+    -moz-transform: perspective(300px) rotateX(25deg);
+    -webkit-transform: perspective(300px) rotateX(25deg);
 }
 
 .scroll:after {
@@ -77,6 +85,8 @@ a:link, a:visited, a:active, a:hover {
     top: 100%;
     position: absolute;
     animation: keyframes-scroll 100s linear 8s infinite;
+    -moz-animation: keyframes-scroll 100s linear 8s infinite;
+    -webkit-animation: keyframes-scroll 100s linear 8s infinite;
 }
 
 .scroll-container p {
@@ -117,6 +127,8 @@ a:link, a:visited, a:active, a:hover {
 @keyframes keyframes-heading {
     0% {
         transform: scale(1);
+        -moz-transform: scale(1);
+        -webkit-transform: scale(1);
         opacity: 1;
     }
 
@@ -126,6 +138,8 @@ a:link, a:visited, a:active, a:hover {
 
     100% {
         transform: scale(0.1);
+        -moz-transform: scale(0.1);
+        -webkit-transform: scale(0.1);
         opacity: 0;
     }
 }
